Documentando rotas referente a playlist, e atualizando http status code do controller da playlist
